[gd_scene load_steps=14 format=2]

[ext_resource path="res://Nucleus/Nucleus.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/electron_pop.wav" type="AudioStream" id=2]
[ext_resource path="res://Atom/Atom.gd" type="Script" id=3]
[ext_resource path="res://Shell/ShellEditor.gd" type="Script" id=4]
[ext_resource path="res://Sounds/bump.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Decay.wav" type="AudioStream" id=6]
[ext_resource path="res://UI/Images/Button_background.png" type="Texture" id=7]
[ext_resource path="res://UI/Fonts/DynamicFontData_PHITRADESIGN.tres" type="DynamicFontData" id=8]
[ext_resource path="res://UI/Recipes/RecipeLabel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Atom/Tooltip.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 61.0

[sub_resource type="DynamicFont" id=2]
size = 75
outline_color = Color( 0.956863, 0.584314, 0.584314, 1 )
extra_spacing_top = -50
extra_spacing_bottom = -50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 75
outline_color = Color( 0.956863, 0.584314, 0.584314, 1 )
extra_spacing_top = -50
extra_spacing_bottom = -50
font_data = ExtResource( 8 )

[node name="Atom" type="Node2D" groups=[
"Atoms",
]]
script = ExtResource( 3 )

[node name="Nucleus" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
cluster_radius = 25

[node name="AtomArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtomArea"]
shape = SubResource( 1 )

[node name="Shells" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="BetaPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0
pitch_scale = 2.0

[node name="AlphaPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
pitch_scale = 0.3

[node name="UnstablePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Tooltip" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.1627
margin_top = -167.93
margin_right = -880.163
margin_bottom = -667.93
rect_scale = Vector2( 0.64, 0.64 )
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Tooltip"]
modulate = Color( 1, 1, 1, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Tooltip"]
margin_right = 215.0
margin_bottom = 99.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtonToolLabel" parent="CanvasLayer/Tooltip/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 24.0
margin_top = 41.0
margin_right = 66.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="NeutronToolLabel" parent="CanvasLayer/Tooltip/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 86.0
margin_top = 41.0
margin_right = 128.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.886275, 0.815686, 0.160784, 1 )
text = "0"

[node name="ElectronToolLabel" parent="CanvasLayer/Tooltip/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 148.0
margin_top = 41.0
margin_right = 190.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.454902, 0.756863, 0.756863, 1 )
text = "0"

[node name="BetaTimer" type="Timer" parent="."]
one_shot = true

[node name="AlphaTimer" type="Timer" parent="."]
one_shot = true

[connection signal="particle_count_updated" from="." to="CanvasLayer/Tooltip" method="_on_Atom_particle_count_updated"]
[connection signal="area_entered" from="AtomArea" to="." method="_on_AtomArea_area_entered"]
[connection signal="area_exited" from="AtomArea" to="." method="_on_AtomArea_area_exited"]
[connection signal="mouse_entered" from="AtomArea" to="." method="_on_AtomArea_mouse_entered"]
[connection signal="mouse_exited" from="AtomArea" to="." method="_on_AtomArea_mouse_exited"]
[connection signal="timeout" from="BetaTimer" to="." method="_on_BetaTimer_timeout"]
[connection signal="timeout" from="AlphaTimer" to="." method="_on_AlphaTimer_timeout"]
